// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HatchingProgressBar Snapshots tests should match snapshot 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="container"
    role="progressbar"
  >
    <div
      class="hatch"
      style="transform: translateX(-60%);"
    />
    <div
      class="filled positive"
      style="transform: translateX(-80%);"
    />
  </div>
</div>
`;

exports[`HatchingProgressBar Snapshots tests should match with view snapshot 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="container"
    role="progressbar"
  >
    <div
      class="hatch"
      style="transform: translateX(-60%);"
    />
    <div
      class="filled negative"
      style="transform: translateX(-80%);"
    />
  </div>
</div>
`;
